# bevy_command_prompt

./: .gitignore  Cargo.toml  README.md
.config/: env.sh  mise.ssh.toml  mise.toml
examples/: basic.rs  minimal.rs  styled.rs
src/: lib.rs
src/actions/: app_ext.rs  console_action.rs  mod.rs
src/actions/actions/: basic_input.rs  history.rs  mod.rs
src/commands/: app_ext.rs  data.rs  events.rs  mod.rs
src/commands/commands/: clear.rs  mod.rs  show.rs
src/ui/: bundle.rs  console.rs  data.rs  events.rs  mod.rs  systems.rs
