[package]
name = "bevy_command_prompt"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version="0.17" }
bevy-inspector-egui = "0.35.0"
bevy_dylib={optional=true, version="0.17.0-rc.2"}
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
shlex = "1.3.0"
strum = { version = "0.27.2", features = ["derive"] }
tiny_bail = "0.7.0"

[features]
dylib= ["bevy/dynamic_linking", "dep:bevy_dylib"]

[dev-dependencies]
bevy-inspector-egui = "0.35.0"

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"
